[tool.poetry]
name = "sbertracker"
version = "0.1.0"
description = ""
authors = ["Osypovskyi <py.egor.py@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
alembic = "^1.13.1"
sqlalchemy = "^2.0.27"
pydantic-settings = "^2.2.1"
psycopg2-binary = "^2.9.9"
pytest = "^8.1.0"
freezegun = "^1.4.0"
httpx = "^0.27.0"
tldextract = "^5.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
